--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-icons": "^3.0.0",
     "flowbite-react": "^0.10.1",
+    "framer-motion": "^11.12.0",
+    "my-app": "file:",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
@@ -18,6 +21,7 @@
     "vanta": "^0.5.24"
   },
   "devDependencies": {
+    "@types/bun": "latest",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -25,8 +29,7 @@
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "@types/bun": "latest"
+    "typescript": "^5"
   },
   "module": "index.ts",
   "type": "module"
