--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-icons": "^3.0.0",
     "flowbite-react": "^0.10.1",
     "framer-motion": "^11.12.0",
+    "lucide-react": "^0.462.0",
     "my-app": "file:",
     "next": "14.2.5",
     "react": "^18",
